--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.14",
     "@astrojs/sitemap": "^3.6.0",
     "@resvg/resvg-js": "^2.6.2",
@@ -21,7 +22,13 @@
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.6",
     "pagefind": "^1.4.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "satori": "^0.18.3",
     "tailwindcss": "^4.1.17"
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3"
   }
 }
